<resources>
    <string name="app_name">presentation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="com_spotify_sdk_redirect_scheme">yourscheme</string>
    <string name="com_spotify_sdk_redirect_host">yourhost</string>

    <string name="top_tracks_title">Your top tracks</string>
    <string name="top_tracks_weeks">Over last weeks</string>
    <string name="top_tracks_months">Over 6 month</string>
    <string name="top_tracks_years">Over years</string>

    <string name="settings_title">Settings</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_account">Account</string>
    <string name="settings_about">About</string>
    <string name="settings_application">Application Info</string>
    <string name="settings_feedback">Send Feedback</string>

    <string name="track_details_add_to_queue">To Queue</string>
    <string name="track_details_add_playlist">To Playlist</string>
    <string name="track_details_add_to_playlist">Choose a playlist to add song to</string>
    <string name="track_details_recommended">Recommended</string>
    <string name="track_details_features">Track Features</string>

    <string name="profile_followers">Followers</string>
    <string name="profile_playlists">Playlists</string>
    <string name="track_feature_energy">Energy</string>

    <string name="track_feature_loudness">Loudness</string>
    <string name="track_feature_rythm">Rhythm</string>
    <string name="track_feature_acousticness">Acousticness</string>
    <string name="track_feature_danceability">Danceability</string>
    <string name="track_feature_valence">Valence</string>
    <string name="track_feature_instrumental">Instrumentalness</string>
    <string name="track_feature_speachness">Speechiness</string>
    <string name="track_feature_liveness">Liveness</string>
    <string name="track_feature_key">Key</string>

    <string name="onboarding_title_1">Welcome to SpotiFavess!</string>
    <string name="onboarding_title_2">Re-live Your favorite music</string>
    <string name="onboarding_title_3">One click away</string>

    <string name="onboarding_message_1">SpotiFaves allows to you view your most listened music on Spotify over the years.</string>
    <string name="onboarding_message_2">Add them to Your playlits once again, learn interesting facts about their audio-features and more</string>
    <string name="onboarding_message_3">SpotiFaves requires your permission to access your music library</string>
    <string name="onboarding_login_btn">Login With Spotify</string>
    <string name="profile_recent_playlists">Recent playlists</string>
    <string name="player_error_message">There was an error connecting to your Spotify Player</string>
    <string name="default_retry">Retry</string>
    <string name="default_confirm">Confirm</string>
    <string name="default_cancel">Cancel</string>
    <string name="playlist_create_title">New Playlist</string>
    <string name="playlist_create_message">Create new playlist to add your favorite tracks to</string>
    <string name="playlist_create_hint">Playlist name</string>

    <string name="darkmode_enabled">Enabled</string>
    <string name="darkmode_disabled">Disabled</string>
    <string name="darkmode_system">Systems default</string>
    <string name="update_title">Update Available</string>
    <string name="update_later_button">Remind later</string>
    <string name="update_now_button">Update</string>
    <string name="update_message">New version of SpotiFaves is available! Make sure to update as it may contain some important bug fixes and new features for you to try out</string>
    <string name="feedback_subject">SpotiFaves Feedback</string>

</resources>
