<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.main.onrepeat.OnRepeatFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/top_tracks_title"
            android:textAppearance="?textAppearanceHeadline5" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:minHeight="200dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="4dp">


            <ProgressBar
                android:id="@+id/shortProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/title1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/top_tracks_weeks"
                    android:textAppearance="?textAppearanceHeadline6"
                    app:layout_constraintEnd_toStartOf="@+id/tracksShortMoreBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_more"
                    android:id="@+id/tracksShortMoreBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- TODO: Update blank fragment layout -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tracksShortRv"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:text="@string/hello_blank_fragment"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/tracksShortMoreBtn"
                    tools:listitem="@layout/item_track" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:minHeight="200dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="4dp">


            <ProgressBar
                android:layout_gravity="center"
                android:id="@+id/midProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/top_tracks_months"
                    android:textAppearance="?textAppearanceHeadline6"
                    app:layout_constraintEnd_toStartOf="@+id/tracksMidMoreBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_more"
                    android:id="@+id/tracksMidMoreBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- TODO: Update blank fragment layout -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tracksMidRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:text="@string/hello_blank_fragment"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/tracksMidMoreBtn"
                    tools:listitem="@layout/item_track" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="4dp">




            <ProgressBar
                android:id="@+id/longProgressBar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/top_tracks_years"
                    android:textAppearance="?textAppearanceHeadline6"
                    app:layout_constraintEnd_toStartOf="@+id/tracksLongMoreBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_more"
                    android:id="@+id/tracksLongMoreBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <!-- TODO: Update blank fragment layout -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tracksLongRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:text="@string/hello_blank_fragment"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/tracksLongMoreBtn"
                    tools:listitem="@layout/item_track" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>